--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -18,6 +18,8 @@ resources:
 - spiaccesscheck_editor_role.yaml
 - spiaccesscheck_viewer_role.yaml
 - spiaccesstokendataupdate_editor_role.yaml
+- spitokenupload_event_role.yaml
+- spitokenupload_event_role_binding.yaml
 
 # Comment the following 4 lines if you want to disable
 # the auth proxy (https://github.com/brancz/kube-rbac-proxy)
