--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -9,6 +9,8 @@ resources:
 - role_binding.yaml
 - leader_election_role.yaml
 - leader_election_role_binding.yaml
+- manager_extra_role.yaml
+- manager_extra_role_binding.yaml
 
 # Aggregating roles which are otherwise done by OLM
 - spiaccesstoken_editor_role.yaml
@@ -18,8 +20,6 @@ resources:
 - spiaccesscheck_editor_role.yaml
 - spiaccesscheck_viewer_role.yaml
 - spiaccesstokendataupdate_editor_role.yaml
-- spitokenupload_event_role.yaml
-- spitokenupload_event_role_binding.yaml
 
 # Comment the following 4 lines if you want to disable
 # the auth proxy (https://github.com/brancz/kube-rbac-proxy)
