--- a/config/rbac/manager_extra_role_binding.yaml
+++ b/config/rbac/manager_extra_role_binding.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: manager-watch-event-rolebinding
+  name: manager-extra-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: manager-watch-event-role
+  name: manager-extra-role
 subjects:
   - kind: ServiceAccount
     name: controller-manager
